0.60
  * Dont filter comments in *.oreillynet.com - they have some funky
    JavaScript stuff and Mozilla renders the page not good if there
    are no HTML comments.
    Changed files: config/misc.zap
  * Use lists and "".join(list) in HtmlFilter.buffer2data, which gives
    a pretty good speedup when filtering big HTML files.

0.59
  * - add missing import of _
    - correct warning of unknown encoding
    - use precompiled _http_re to match request lines
    - use content-length also if rewriting
    - syntax cleanups
    Changed files: wc/proxy/HttpServer.py
  * remove unsupported "compress" encoding from Accept-Encodings header
    Changed files: wc/proxy/HttpClient.py
  * import errno
    Changed files: wc/proxy/Connection.py
  * import sys
    Changed files: wc/proxy/Listener.py
  * use tuple of allowed Content-Encodings instead of regex
    Changed files: wc/filter/Compress.py
  * updated squid example config with no-digest peer option
    Changed files: README.squid
  * recompile HTML parser with bison 1.50 and flex 2.5.22
    Changed files: wc/parser/Makefile, wc/parser/htmllex.c,
      wc/parser/htmlparse.c wc/parser/htmlparse.h
  * enable the referrer HTTP header filter per default
    Changed files: config/header.zap
  * add allowed host acls for client connects
    Changed files: wc/proxy/HttpClient.py, wc/gui/ConfWindow.py,
      config/webcleaner.conf, wc/__init__.py, README, setup.py,
      debian/control

0.58:
  * Set the 'Via' HTTP header when forwarding requests/responses
  * Remove the Via header in the default filter configuration,
    so the above is not even noticed :)
  * Add a 'Warning' HTTP header when content-encoding is changed
  * Honor the 'Max-Forwards' HTTP header for OPTIONS requests
  * Adjust empty paths in requests to be '/'. This was causing
    "puzzling header received" errors.
  * Updated german translation

0.57:
  * Oopsie, fix umask to 0177

0.56:
  * fix dropping of root privileges if run as root
  * set umask to 0277